--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <p>How it all </p>
    <p> STARTED❤️ </p>
 
-  <img src="anaya3.jpeg" />
+  <img src="WhatsApp Image 2025-01-29 at 4.14.49 PM.jpeg" />
 </div>
 
 <div class="paper">
