--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 </div>
 
 <div class="paper image">
-  <p>How it all </p>
-   <p> STARTED❤️ </p>
+  <p>From the time </p>
+   <p> I met you❤️ </p>
 
   <img src="WhatsApp Image 2025-01-29 at 4.14.49 PM.jpeg" />
 </div>
