--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
 </head>
 <body> 
-  <audio controls autoplay>
+ <audio controls autoplay muted>
    <source src="sabu.mpeg" type="audio/ogg">
-  </audio>
+ </audio>
+
 <!-- partial:index.partial.html -->
 <!-- A pen by Developer Apolune_04  -->
 <div class="paper heart">
