--- a/index.html
+++ b/index.html
@@ -1,61 +1,47 @@
-<!DOCTYPE html>
-<html lang="en" >
+html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>JJS - Birthday papers❤️</title>
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'><link rel="stylesheet" href="./style.css">
-
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&family=Homemade+Apple&display=swap'>
+  <link rel="stylesheet" href="./style.css">
 </head>
-<body> 
- <audio controls autoplay muted>
-   <source src="IThinkTheyCallThisLoveCover.mpeg" type="audio/ogg">
- </audio>
+<body>
+  <!-- Audio Element -->
+  <audio id="bg-music" src="IThinkTheyCallThisLoveCover.mpeg" type="audio/mpeg" loop></audio>
 
-<!-- partial:index.partial.html -->
-<!-- A pen by Developer Apolune_04  -->
-<div class="paper heart">
+  <!-- Papers Section -->
+  <div class="paper heart"></div>
 
-</div>
+  <div class="paper image">
+    <img src="Picsart_25-03-10_09-38-50-406.jpg" />
+  </div>
 
-<div class="paper image">
-  <p</p>
-  <img src="Picsart_25-03-10_09-38-50-406.jpg" />
-</div>
+  <div class="paper red">
+    <p class="p1">You're the first Person</p>
+    <p class="p2">who makes me feel like I'm enough</p>
+    <p class="p2">and show me</p>
+    <p class="p2">what 'I love you' means</p>
+  </div>
 
-<div class="paper red">
-<p class="p1"> you're the first Person</p>
-<p class="p2"> who makes me feel like I'm enough </p>
-<p class="p2"> and show me </p>
-<p class="p2"> what 'I love you' means  </p>
+  <div class="paper">
+    <p class="p1">You are my first</p>
+    <p class="p1">and I don't mean my first kiss, <span style="color: red !important;">❤️</span></p>
+    <p>or my first relationship</p>
+    <p>or my first I love you</p>
+  </div>
 
-</div>
+  <div class="paper image">
+    <p>How it's</p>
+    <p>Going</p>
+    <img src="anaya how its going.jpeg" />
+  </div>
 
-<div class="paper">
-<p class="p1">You are my first </p>
-  <p class="p1">and I dont mean my first kiss, <span style="color: red !important;">❤️</span></p>
-  <p> or my first relationship   </p>
-  <p> or my first I love you  </p>
-</div>
+  <div class="paper image">
+    <p>From the time</p>
+    <p>I met you❤️</p>
+    <img src="WhatsApp Image 2025-01-29 at 4.14.49 PM.jpeg" />
+  </div>
 
-<div class="paper image">
-  <p> How its </p>
-    <p> Going </p>
-   <img src="anaya how its going.jpeg" />
-</div>
-
-<div class="paper image">
-  <p>From the time </p>
-   <p> I met you❤️ </p>
-
-  <img src="WhatsApp Image 2025-01-29 at 4.14.49 PM.jpeg" />
-</div>
-
-<div class="paper">
-<p class="p1">Drag the papers to move!</p>
-</div>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-</body>
-</html>
- 
+  <div class="paper">
+    <p class="p1">Drag the papers to move!</p>
+  </div>
