--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'><link rel="stylesheet" href="./style.css">
 
 </head>
-<body> 
-MAKE THE AUDIO PLAY ALSO WHY ISNT THE AUDIO PLAYING 
- <audio controls autoplay muted>
+<body>  
+ <audio controls autoplay >
    <source src="IThinkTheyCallThisLoveCover.mpeg" type="audio/ogg">
  </audio>
 
