--- a/index.html
+++ b/index.html
@@ -3,35 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <title>JJS - Birthday papers❤️</title>
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'><link rel="stylesheet" href="./style.css">
-
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>  
- <audio controls autoplay >
+ <audio controls autoplay>
    <source src="I Think They Call This Love Cover.mp4" type="audio/ogg">
  </audio>
 
 <!-- partial:index.partial.html -->
 <!-- A pen by Developer Apolune_04  -->
 <div class="paper heart">
-
 </div>
 
 <div class="paper image">
-  <p</p>
+  <p></p>
   <img src="Picsart_25-03-10_09-38-50-406.jpg" />
 </div>
 
 <div class="paper red">
-<p class="p1"> you're the first Person</p>
-<p class="p2"> who makes me feel like I'm enough </p>
-<p class="p2"> and show me </p>
-<p class="p2"> what 'I love you' means  </p>
-
+  <p class="p1"> you're the first Person</p>
+  <p class="p2"> who makes me feel like I'm enough </p>
+  <p class="p2"> and show me </p>
+  <p class="p2"> what 'I love you' means  </p>
 </div>
 
 <div class="paper">
-<p class="p1">You are my first </p>
+  <p class="p1">You are my first </p>
   <p class="p1">and I dont mean my first kiss, <span style="color: red !important;">❤️</span></p>
   <p> or my first relationship   </p>
   <p> or my first I love you  </p>
@@ -39,22 +37,30 @@
 
 <div class="paper image">
   <p> How its </p>
-    <p> Going </p>
-   <img src="anaya how its going.jpeg" />
+  <p> Going </p>
+  <img src="anaya how its going.jpeg" />
 </div>
 
 <div class="paper image">
   <p>From the time </p>
-   <p> I met you❤️ </p>
-
+  <p> I met you❤️ </p>
   <img src="WhatsApp Image 2025-01-29 at 4.14.49 PM.jpeg" />
 </div>
 
 <div class="paper">
-<p class="p1">Drag the papers to move!</p>
+  <p class="p1">Drag the papers to move!</p>
 </div>
 <!-- partial -->
-  <script  src="./script.js"></script>
-
+<script src="./script.js"></script>
+<script>
+// This script listens for the first touch event to start audio playback.
+// It addresses mobile autoplay restrictions without altering other features.
+document.addEventListener('touchstart', function() {
+    var audioElement = document.querySelector('audio');
+    if (audioElement) {
+        audioElement.play();
+    }
+}, { once: true });
+</script>
 </body>
 </html>
