--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>  
- <audio controls autoplay>
+ <audio controls>
    <source src="I Think They Call This Love Cover.mp3" type="audio/mp3">
  </audio>
 
