--- a/index.html
+++ b/index.html
@@ -15,33 +15,33 @@
 </div>
 
 <div class="paper image">
-  <p></p>
+  <p> from Jameela (JJS) </p>
   <img src="Picsart_25-03-10_09-38-50-406.jpg" />
 </div>
 <div class="paper image">
-  <p> How its </p>
-  <p> Going </p>
+  <p> Hope you  </p>
+  <p> like it ! </p>
   <img src="anaya how its going.jpeg" />
 </div>
 <div class="paper red">
-  <p class="p1"> you're the first Person</p>
-  <p class="p2"> who makes me feel like I'm enough </p>
-  <p class="p2"> and show me </p>
-  <p class="p2"> what 'I love you' means  </p>
+  <p class="p1"> We may never cross paths again, </p>
+  <p class="p2"> but I want you to know that you are talented, unique, and capable of handling whatever life throws your way. </p>
+  <p class="p2"> The road ahead won’t always be easy, but there’s so much to learn from what’s to come. </p>
+  <p class="p2"> Stay strong, because you have the power to shape the life you desire.</p>
 </div>
 
 <div class="paper">
-  <p class="p1">You are my first </p>
-  <p class="p1">and I dont mean my first kiss, <span style="color: red !important;">❤️</span></p>
-  <p> or my first relationship   </p>
-  <p> or my first I love you  </p>
+  <p class="p1">To SB </p>
+  <p class="p1">Hey, first of all, happy birthday! With this, I just want you to remember that at some point in your life, <span style="color: red !important;">❤️</span></p>
+  <p>at some point in your life,there was a guy who stumbled into your world and went haywire for you.</p>
+  <p> To him, you were special—you changed him. </p>
 </div>
 
 
 
 <div class="paper image">
-  <p>From the time </p>
-  <p> I met you❤️ </p>
+  <p> The trip that began a  </p>
+  <p> new chapter for us. </p>
   <img src="WhatsApp Image 2025-01-29 at 4.14.49 PM.jpeg" />
 </div>
 
