--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   <img src="Picsart_25-03-10_09-38-50-406.jpg" />
 </div>
 <div class="paper image">
-  <p> Hope you  </p>
-  <p> like it ! </p>
+  <p> Hope you like it! </p>
   <img src="anaya how its going.jpeg" />
 </div>
 <div class="paper red">
