--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <p class="p2"> but I want you to know that you are talented, unique, and capable of handling whatever life throws your way. </p>
   <p class="p2"> The road ahead won’t always be easy, but there’s so much to learn from what’s to come. </p>
   <p class="p2"> Stay strong, because you have the power to shape the life you desire.</p>
+ <p class="p2"> I won’t say much more, but just remember—you are one of a kind, just like the moon.</p>
 </div>
 
 <div class="paper">
